ListDeviceProfileRequest: sort added
