# go/as/external/api/deviceProfile.pb.go
@@ -387,7 +387,11 @@ type ListDeviceProfileRequest struct {
 	// Organization id to filter on.
 	OrganizationId int64 `protobuf:"varint,3,opt,name=organization_id,json=organizationID,proto3" json:"organization_id,omitempty"`
 	// Application id to filter on.
-	ApplicationId        int64    `protobuf:"varint,4,opt,name=application_id,json=applicationID,proto3" json:"application_id,omitempty"`
+	ApplicationId int64 `protobuf:"varint,4,opt,name=application_id,json=applicationID,proto3" json:"application_id,omitempty"`
+	// sort list by name
+	OrderBy string `protobuf:"bytes,5,opt,name=orderBy,proto3" json:"orderBy,omitempty"`
+	// sort direction
+	Order                string   `protobuf:"bytes,6,opt,name=order,proto3" json:"order,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -444,6 +448,20 @@ func (m *ListDeviceProfileRequest) GetApplicationId() int64 {
 		return m.ApplicationId
 	}
 	return 0
+}
+
+func (m *ListDeviceProfileRequest) GetOrderBy() string {
+	if m != nil {
+		return m.OrderBy
+	}
+	return ""
+}
+
+func (m *ListDeviceProfileRequest) GetOrder() string {
+	if m != nil {
+		return m.Order
+	}
+	return ""
 }
 
 type ListDeviceProfileResponse struct {
@@ -511,50 +529,52 @@ func init() {
 }
 
 var fileDescriptor_d0dcf865cca06987 = []byte{
-	// 684 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xac, 0x55, 0xcd, 0x6e, 0xd3, 0x40,
-	0x10, 0x56, 0xe2, 0xd4, 0xa8, 0x53, 0x35, 0x55, 0x97, 0x52, 0x52, 0xb7, 0x34, 0xc5, 0x08, 0x51,
-	0x2a, 0x62, 0x4b, 0xed, 0x01, 0x95, 0x5b, 0x69, 0x50, 0x15, 0x09, 0x21, 0x64, 0x40, 0x48, 0x5c,
-	0xa2, 0x8d, 0x3d, 0x49, 0x57, 0xb5, 0xbd, 0x8b, 0xbd, 0x09, 0x7f, 0xea, 0x85, 0x57, 0xe0, 0xc2,
-	0x53, 0x70, 0xe4, 0x25, 0x38, 0xf2, 0x0a, 0x3c, 0x08, 0xf2, 0x7a, 0x83, 0x12, 0xd7, 0xe6, 0xa7,
-	0xe2, 0xe6, 0xdd, 0xfd, 0x66, 0xe6, 0x9b, 0x6f, 0x7e, 0x0c, 0xb7, 0x68, 0xea, 0xe2, 0x5b, 0x89,
-	0x49, 0x4c, 0x43, 0x97, 0x0a, 0xe6, 0x06, 0x38, 0x61, 0x3e, 0x3e, 0x4d, 0xf8, 0x90, 0x85, 0xe8,
-	0x88, 0x84, 0x4b, 0x4e, 0x0c, 0x2a, 0x98, 0xb5, 0x35, 0xe2, 0x7c, 0x14, 0xa2, 0x02, 0xd1, 0x38,
-	0xe6, 0x92, 0x4a, 0xc6, 0xe3, 0x34, 0x87, 0x58, 0x6d, 0xfd, 0xaa, 0x4e, 0x83, 0xf1, 0xd0, 0x95,
-	0x2c, 0xc2, 0x54, 0xd2, 0x48, 0x68, 0xc0, 0x66, 0x11, 0x80, 0x91, 0x90, 0xef, 0xf4, 0xe3, 0x76,
-	0x91, 0x85, 0xc8, 0xe3, 0x6b, 0xef, 0xf6, 0x4b, 0xb0, 0x8e, 0x13, 0xa4, 0x12, 0xbb, 0xb3, 0xec,
-	0x3c, 0x7c, 0x3d, 0xc6, 0x54, 0x92, 0x43, 0x68, 0xe6, 0xac, 0xfb, 0xda, 0xac, 0x55, 0xdb, 0xa9,
-	0xed, 0x2e, 0xed, 0x13, 0x87, 0x0a, 0xe6, 0xcc, 0x9b, 0x2c, 0xcf, 0xe5, 0x67, 0x77, 0x60, 0xb3,
-	0xd4, 0x71, 0x2a, 0x78, 0x9c, 0x22, 0x69, 0x42, 0x9d, 0x05, 0xca, 0xdb, 0xa2, 0x57, 0x67, 0x81,
-	0x7d, 0x17, 0xae, 0x9f, 0xa0, 0x2c, 0x25, 0x51, 0x84, 0x7e, 0xab, 0x41, 0xeb, 0x22, 0x56, 0xfb,
-	0xbd, 0x3c, 0x63, 0x72, 0x08, 0xe0, 0x2b, 0xc6, 0x41, 0x9f, 0xca, 0x56, 0x5d, 0x99, 0x59, 0x4e,
-	0x2e, 0xae, 0x33, 0x15, 0xd7, 0x79, 0x3e, 0x55, 0xdf, 0x5b, 0xd4, 0xe8, 0xa3, 0x4c, 0x27, 0x18,
-	0x8b, 0x60, 0x6a, 0x6a, 0xfc, 0xd9, 0x54, 0xa3, 0x8f, 0x64, 0x56, 0x80, 0x17, 0xea, 0xf0, 0xbf,
-	0x0b, 0x70, 0x0f, 0xac, 0x2e, 0x86, 0x58, 0xe1, 0xb8, 0x28, 0xea, 0xd7, 0x3a, 0x5c, 0x9b, 0x03,
-	0x3e, 0x66, 0xa9, 0xec, 0x49, 0x8c, 0x8a, 0x48, 0x42, 0xa0, 0x11, 0xd3, 0x08, 0x95, 0x40, 0x8b,
-	0x9e, 0xfa, 0x26, 0x77, 0x60, 0x85, 0x27, 0x23, 0x1a, 0xb3, 0xf7, 0xaa, 0x75, 0xfb, 0x2c, 0x50,
-	0x22, 0x18, 0x5e, 0x73, 0xf6, 0xba, 0xd7, 0x25, 0x7b, 0xb0, 0x1a, 0xa3, 0x7c, 0xc3, 0x93, 0xb3,
-	0x7e, 0x8a, 0xc9, 0x04, 0x93, 0x0c, 0xda, 0x50, 0xd0, 0x15, 0xfd, 0xf0, 0x4c, 0xdd, 0xf7, 0xba,
-	0x85, 0x7a, 0x2c, 0x5c, 0xbe, 0x1e, 0xe6, 0x3f, 0xd4, 0x83, 0x38, 0x70, 0xb5, 0xc0, 0x50, 0x65,
-	0x7b, 0x45, 0x65, 0xbb, 0x3a, 0xc7, 0xf1, 0x09, 0x8d, 0xd0, 0xfe, 0x5c, 0x83, 0x56, 0xa6, 0x55,
-	0xa9, 0xca, 0x6b, 0xb0, 0x10, 0xb2, 0x88, 0x49, 0x25, 0x9f, 0xe1, 0xe5, 0x07, 0xb2, 0x0e, 0x26,
-	0x1f, 0x0e, 0x53, 0xcc, 0x9b, 0xcc, 0xf0, 0xf4, 0xe9, 0xef, 0x55, 0xbc, 0x0d, 0x4d, 0x2a, 0x44,
-	0xc8, 0xfc, 0x5f, 0xb8, 0x5c, 0xc2, 0xe5, 0x99, 0xdb, 0x5e, 0xd7, 0x16, 0xb0, 0x51, 0xc2, 0x4c,
-	0x0f, 0x4a, 0x1b, 0x96, 0x24, 0x97, 0x34, 0xec, 0xfb, 0x7c, 0x1c, 0x4f, 0x09, 0x82, 0xba, 0x3a,
-	0xce, 0x6e, 0xc8, 0x3e, 0x98, 0x09, 0xa6, 0xe3, 0x30, 0x63, 0x69, 0x28, 0xfd, 0x2e, 0xb4, 0xdc,
-	0xb4, 0x47, 0x3c, 0x8d, 0xdc, 0xff, 0xd2, 0x80, 0xb5, 0x39, 0x44, 0x26, 0x14, 0xf3, 0x91, 0x84,
-	0x60, 0xe6, 0xdb, 0x80, 0xb4, 0x95, 0x9b, 0xea, 0x9d, 0x63, 0xed, 0x54, 0x03, 0x72, 0xea, 0x76,
-	0xfb, 0xe3, 0xf7, 0x1f, 0x9f, 0xea, 0x1b, 0xf6, 0xda, 0xcc, 0x5a, 0xed, 0x4c, 0xf7, 0xda, 0x83,
-	0xda, 0x1e, 0x41, 0x30, 0x4e, 0x50, 0x92, 0x2d, 0xe5, 0xa9, 0x62, 0xad, 0x58, 0x37, 0x2a, 0x5e,
-	0x75, 0x90, 0x9b, 0x2a, 0xc8, 0x26, 0xd9, 0x28, 0x0b, 0xe2, 0x7e, 0x60, 0xc1, 0x39, 0x99, 0x80,
-	0x99, 0x8f, 0xae, 0x4e, 0xaa, 0x7a, 0x8e, 0xad, 0xf5, 0x0b, 0xcd, 0xf7, 0x28, 0x5b, 0xd2, 0xf6,
-	0x81, 0x8a, 0xd2, 0xb1, 0x76, 0xcb, 0xa3, 0xcc, 0xcf, 0xbe, 0xc3, 0x82, 0xf3, 0x2c, 0xbd, 0x00,
-	0xcc, 0x7c, 0xb2, 0x75, 0xdc, 0xea, 0x31, 0xaf, 0x8c, 0xab, 0xb3, 0xdb, 0xfb, 0x4d, 0x76, 0x3e,
-	0x34, 0xb2, 0xfa, 0x92, 0x5c, 0xa7, 0xaa, 0x16, 0xb7, 0xb6, 0xab, 0x9e, 0xb5, 0x8e, 0x5b, 0x2a,
-	0xd2, 0x3a, 0x29, 0x2d, 0xd6, 0xc3, 0xc3, 0x57, 0xf7, 0x47, 0x4c, 0x9e, 0x8e, 0x07, 0x8e, 0xcf,
-	0x23, 0x77, 0x90, 0x70, 0x9f, 0xd2, 0xc4, 0xf5, 0x4f, 0x59, 0x22, 0x52, 0x49, 0xfd, 0xb3, 0x4e,
-	0x66, 0x34, 0xe2, 0xee, 0xe4, 0xc0, 0x2d, 0xfc, 0xc8, 0x06, 0xa6, 0x4a, 0xe9, 0xe0, 0x67, 0x00,
-	0x00, 0x00, 0xff, 0xff, 0xfc, 0xae, 0x9d, 0x07, 0x68, 0x07, 0x00, 0x00,
+	// 708 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xac, 0x55, 0xcb, 0x6e, 0xd3, 0x4c,
+	0x14, 0x56, 0x2e, 0x4d, 0x95, 0x53, 0x35, 0x55, 0xe7, 0xef, 0x5f, 0x52, 0xb7, 0x34, 0xc5, 0x08,
+	0x51, 0x2a, 0x62, 0x4b, 0xed, 0x02, 0x95, 0x5d, 0xdb, 0xa0, 0x2a, 0x12, 0x42, 0xc8, 0x80, 0x90,
+	0xd8, 0x44, 0x13, 0xfb, 0x24, 0x1d, 0xd5, 0xf6, 0x98, 0xf1, 0x24, 0x50, 0x50, 0x37, 0xbc, 0x02,
+	0xef, 0xc1, 0x92, 0x67, 0x40, 0x62, 0xc9, 0x2b, 0xf0, 0x20, 0xc8, 0xe3, 0x31, 0x4a, 0x5c, 0x9b,
+	0x4b, 0xc5, 0xce, 0x67, 0xe6, 0x3b, 0x97, 0xef, 0x3b, 0x67, 0x8e, 0xe1, 0x36, 0x8d, 0x6d, 0x7c,
+	0x2b, 0x51, 0x84, 0xd4, 0xb7, 0x69, 0xc4, 0x6c, 0x0f, 0xa7, 0xcc, 0xc5, 0xa7, 0x82, 0x8f, 0x98,
+	0x8f, 0x56, 0x24, 0xb8, 0xe4, 0xa4, 0x46, 0x23, 0x66, 0x6c, 0x8d, 0x39, 0x1f, 0xfb, 0xa8, 0x40,
+	0x34, 0x0c, 0xb9, 0xa4, 0x92, 0xf1, 0x30, 0x4e, 0x21, 0x46, 0x47, 0xdf, 0x2a, 0x6b, 0x38, 0x19,
+	0xd9, 0x92, 0x05, 0x18, 0x4b, 0x1a, 0x44, 0x1a, 0xb0, 0x99, 0x07, 0x60, 0x10, 0xc9, 0x0b, 0x7d,
+	0xb9, 0x9d, 0xaf, 0x22, 0x4a, 0xf3, 0xeb, 0xe8, 0xe6, 0x4b, 0x30, 0x4e, 0x04, 0x52, 0x89, 0xbd,
+	0xd9, 0xea, 0x1c, 0x7c, 0x3d, 0xc1, 0x58, 0x92, 0x43, 0x68, 0xa5, 0x55, 0x0f, 0xb4, 0x5b, 0xbb,
+	0xb2, 0x53, 0xd9, 0x5d, 0xda, 0x27, 0x16, 0x8d, 0x98, 0x35, 0xef, 0xb2, 0x3c, 0xc7, 0xcf, 0xec,
+	0xc2, 0x66, 0x61, 0xe0, 0x38, 0xe2, 0x61, 0x8c, 0xa4, 0x05, 0x55, 0xe6, 0xa9, 0x68, 0x4d, 0xa7,
+	0xca, 0x3c, 0xf3, 0x1e, 0xdc, 0x38, 0x45, 0x59, 0x58, 0x44, 0x1e, 0xfa, 0xb5, 0x02, 0xed, 0xab,
+	0x58, 0x1d, 0xf7, 0xfa, 0x15, 0x93, 0x43, 0x00, 0x57, 0x55, 0xec, 0x0d, 0xa8, 0x6c, 0x57, 0x95,
+	0x9b, 0x61, 0xa5, 0xe2, 0x5a, 0x99, 0xb8, 0xd6, 0xf3, 0x4c, 0x7d, 0xa7, 0xa9, 0xd1, 0x47, 0x89,
+	0x4e, 0x30, 0x89, 0xbc, 0xcc, 0xb5, 0xf6, 0x7b, 0x57, 0x8d, 0x3e, 0x92, 0x49, 0x03, 0x5e, 0x28,
+	0xe3, 0x5f, 0x37, 0xe0, 0x3e, 0x18, 0x3d, 0xf4, 0xb1, 0x24, 0x70, 0x5e, 0xd4, 0xcf, 0x55, 0xf8,
+	0x7f, 0x0e, 0xf8, 0x98, 0xc5, 0xb2, 0x2f, 0x31, 0xc8, 0x23, 0x09, 0x81, 0x7a, 0x48, 0x03, 0x54,
+	0x02, 0x35, 0x1d, 0xf5, 0x4d, 0xee, 0xc2, 0x0a, 0x17, 0x63, 0x1a, 0xb2, 0x77, 0x6a, 0x74, 0x07,
+	0xcc, 0x53, 0x22, 0xd4, 0x9c, 0xd6, 0xec, 0x71, 0xbf, 0x47, 0xf6, 0x60, 0x35, 0x44, 0xf9, 0x86,
+	0x8b, 0xf3, 0x41, 0x8c, 0x62, 0x8a, 0x22, 0x81, 0xd6, 0x15, 0x74, 0x45, 0x5f, 0x3c, 0x53, 0xe7,
+	0xfd, 0x5e, 0xae, 0x1f, 0x0b, 0xd7, 0xef, 0x47, 0xe3, 0x2f, 0xfa, 0x41, 0x2c, 0xf8, 0x2f, 0x57,
+	0xa1, 0x62, 0xbb, 0xa8, 0xd8, 0xae, 0xce, 0xd5, 0xf8, 0x84, 0x06, 0x68, 0x7e, 0xa9, 0x40, 0x3b,
+	0xd1, 0xaa, 0x50, 0xe5, 0x35, 0x58, 0xf0, 0x59, 0xc0, 0xa4, 0x92, 0xaf, 0xe6, 0xa4, 0x06, 0x59,
+	0x87, 0x06, 0x1f, 0x8d, 0x62, 0x4c, 0x87, 0xac, 0xe6, 0x68, 0xeb, 0xcf, 0x55, 0xbc, 0x03, 0x2d,
+	0x1a, 0x45, 0x3e, 0x73, 0x7f, 0xe2, 0x52, 0x09, 0x97, 0x67, 0x4e, 0xfb, 0x3d, 0xd2, 0x86, 0x45,
+	0x2e, 0x3c, 0x14, 0xc7, 0x17, 0x4a, 0xbd, 0xa6, 0x93, 0x99, 0x49, 0x5d, 0xea, 0x53, 0x49, 0xd3,
+	0x74, 0x52, 0xc3, 0x8c, 0x60, 0xa3, 0x80, 0x89, 0x7e, 0x58, 0x1d, 0x58, 0x92, 0x5c, 0x52, 0x7f,
+	0xe0, 0xf2, 0x49, 0x98, 0x11, 0x02, 0x75, 0x74, 0x92, 0x9c, 0x90, 0x7d, 0x68, 0x08, 0x8c, 0x27,
+	0x7e, 0xc2, 0xaa, 0xa6, 0xf4, 0xbe, 0x32, 0xa2, 0xd9, 0x4c, 0x39, 0x1a, 0xb9, 0xff, 0xa9, 0x0e,
+	0x6b, 0x73, 0x88, 0x44, 0x58, 0xe6, 0x22, 0xf1, 0xa1, 0x91, 0x6e, 0x0f, 0xd2, 0x51, 0x61, 0xca,
+	0x77, 0x94, 0xb1, 0x53, 0x0e, 0x48, 0x4b, 0x37, 0x3b, 0x1f, 0xbe, 0x7d, 0xff, 0x58, 0xdd, 0x30,
+	0xd7, 0x66, 0xd6, 0x70, 0x37, 0xdb, 0x83, 0x0f, 0x2b, 0x7b, 0x04, 0xa1, 0x76, 0x8a, 0x92, 0x6c,
+	0xa9, 0x48, 0x25, 0x6b, 0xc8, 0xb8, 0x59, 0x72, 0xab, 0x93, 0xdc, 0x52, 0x49, 0x36, 0xc9, 0x46,
+	0x51, 0x12, 0xfb, 0x3d, 0xf3, 0x2e, 0xc9, 0x14, 0x1a, 0xe9, 0x53, 0xd7, 0xa4, 0xca, 0xdf, 0xbd,
+	0xb1, 0x7e, 0x65, 0x58, 0x1f, 0x25, 0x4b, 0xdd, 0x3c, 0x50, 0x59, 0xba, 0xc6, 0x6e, 0x71, 0x96,
+	0xf9, 0x5d, 0x61, 0x31, 0xef, 0x32, 0xa1, 0xe7, 0x41, 0x23, 0xdd, 0x04, 0x3a, 0x6f, 0xf9, 0x5a,
+	0x28, 0xcd, 0xab, 0xd9, 0xed, 0xfd, 0x82, 0x9d, 0x0b, 0xf5, 0xa4, 0xbf, 0x24, 0xd5, 0xa9, 0xec,
+	0x49, 0x18, 0xdb, 0x65, 0xd7, 0x5a, 0xc7, 0x2d, 0x95, 0x69, 0x9d, 0x14, 0x36, 0xeb, 0xf8, 0xf0,
+	0xd5, 0x83, 0x31, 0x93, 0x67, 0x93, 0xa1, 0xe5, 0xf2, 0xc0, 0x1e, 0x0a, 0xee, 0x52, 0x2a, 0x6c,
+	0xf7, 0x8c, 0x89, 0x28, 0x96, 0xd4, 0x3d, 0xef, 0x26, 0x4e, 0x63, 0x6e, 0x4f, 0x0f, 0xec, 0xdc,
+	0x8f, 0x6f, 0xd8, 0x50, 0x94, 0x0e, 0x7e, 0x04, 0x00, 0x00, 0xff, 0xff, 0x4e, 0xf2, 0x63, 0x70,
+	0x98, 0x07, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
