# swagger/as/external/api/deviceProfile.swagger.json
@@ -59,6 +59,20 @@
             "required": false,
             "type": "string",
             "format": "int64"
+          },
+          {
+            "name": "orderBy",
+            "description": "sort list by name.",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "order",
+            "description": "sort direction.",
+            "in": "query",
+            "required": false,
+            "type": "string"
           }
         ],
         "tags": [
